<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Search, should appear as action button -->
    <item
            android:id="@+id/action_follow_switch"
            android:icon="@drawable/device_access_location_off"
            android:showAsAction="ifRoom|collapseActionView"
            android:visible="true"
            android:title="启用定位功能"/>

    <item android:id="@+id/action_task_list"
          android:icon="@drawable/ic_action_task"
          android:title="@string/action_task"
          android:showAsAction="ifRoom" />

    <!--<item android:id="@+id/action_search"-->
          <!--android:icon="@drawable/ic_action_search"-->
          <!--android:title="@string/action_search"-->
          <!--android:showAsAction="ifRoom" />-->

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_cancel_task"
          android:title="@string/action_cancel_task"
          android:showAsAction="never" />

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:showAsAction="never" />
</menu>